// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`20260301000000-create-admin.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "admin"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000000-create-admin.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "admin",
      "options": {
        "validator": {
          "$jsonSchema": {
            "bsonType": "object",
            "title": "admin",
            "required": [
              "login",
              "personalData"
            ],
            "properties": {
              "_id": {
                "bsonType": "objectId"
              },
              "login": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "email",
                  "password"
                ],
                "properties": {
                  "email": {
                    "bsonType": "binData",
                    "description": "login address, deterministically encrypted — equality is the only query it supports"
                  },
                  "password": {
                    "bsonType": "string",
                    "minLength": 60,
                    "maxLength": 60
                  },
                  "firstLogin": {
                    "bsonType": "date"
                  },
                  "lastLogin": {
                    "bsonType": "date"
                  },
                  "onboardingStep": {
                    "bsonType": "string",
                    "maxLength": 4
                  },
                  "onboardingDone": {
                    "bsonType": "bool"
                  },
                  "rememberMe": {
                    "bsonType": "bool"
                  }
                },
                "additionalProperties": false
              },
              "personalData": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "firstName",
                  "lastName"
                ],
                "properties": {
                  "firstName": {
                    "bsonType": "binData",
                    "description": "given name, encrypted"
                  },
                  "lastName": {
                    "bsonType": "binData",
                    "description": "family name, encrypted"
                  }
                },
                "additionalProperties": false
              },
              "deleted": {
                "bsonType": "date",
                "description": "deletion date"
              },
              "disabled": {
                "bsonType": "bool",
                "description": "present and true: disabled, absent: login allowed"
              },
              "resetPwd": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "resetDateReq",
                  "resetHash"
                ],
                "properties": {
                  "resetDateReq": {
                    "bsonType": "date",
                    "description": "request date"
                  },
                  "resetHash": {
                    "bsonType": "string",
                    "minLength": 50,
                    "maxLength": 50,
                    "description": "comparison hash"
                  }
                },
                "additionalProperties": false
              },
              "__v": {
                "bsonType": "int"
              }
            },
            "additionalProperties": false
          }
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "admin",
      "key": {
        "login.email": 1
      },
      "options": {
        "name": "login.email_unique",
        "unique": true
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000100-create-shopOwner.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "shopOwner"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000100-create-shopOwner.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "shopOwner",
      "options": {
        "validator": {
          "$jsonSchema": {
            "bsonType": "object",
            "title": "shopOwner",
            "required": [
              "login",
              "registeredAt"
            ],
            "properties": {
              "_id": {
                "bsonType": "objectId"
              },
              "login": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "email",
                  "password"
                ],
                "properties": {
                  "email": {
                    "bsonType": "binData",
                    "description": "login address, deterministically encrypted — equality is the only query it supports"
                  },
                  "password": {
                    "bsonType": "string",
                    "minLength": 60,
                    "maxLength": 60
                  },
                  "firstLogin": {
                    "bsonType": "date"
                  },
                  "lastLogin": {
                    "bsonType": "date"
                  },
                  "onboardingStep": {
                    "bsonType": "string",
                    "maxLength": 4
                  },
                  "onboardingDone": {
                    "bsonType": "bool"
                  },
                  "rememberMe": {
                    "bsonType": "bool"
                  }
                },
                "additionalProperties": false
              },
              "personalData": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "firstName",
                  "lastName",
                  "birth",
                  "address",
                  "contacts"
                ],
                "properties": {
                  "firstName": {
                    "bsonType": "string",
                    "maxLength": 100
                  },
                  "lastName": {
                    "bsonType": "string",
                    "maxLength": 100
                  },
                  "birth": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "date"
                    ],
                    "properties": {
                      "date": {
                        "bsonType": "binData",
                        "description": "date of birth, encrypted — no range query and no sort can reach it"
                      }
                    },
                    "additionalProperties": false
                  },
                  "address": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "street",
                      "postalCode",
                      "city",
                      "province"
                    ],
                    "properties": {
                      "street": {
                        "bsonType": "binData",
                        "description": "street and number, encrypted"
                      },
                      "postalCode": {
                        "bsonType": "binData",
                        "description": "postal code, encrypted — the exactly-5 rule cannot survive the ciphertext"
                      },
                      "city": {
                        "bsonType": "string",
                        "maxLength": 100
                      },
                      "province": {
                        "bsonType": "binData",
                        "description": "province, encrypted — the exactly-2 rule cannot survive the ciphertext"
                      },
                      "position": {
                        "bsonType": "binData",
                        "description": "GeoJSON point, encrypted whole — no 2dsphere index can read it, and none exists here"
                      }
                    },
                    "additionalProperties": false
                  },
                  "contacts": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "mobile",
                      "email"
                    ],
                    "properties": {
                      "mobile": {
                        "bsonType": "binData",
                        "description": "mobile number, encrypted"
                      },
                      "landline": {
                        "bsonType": "binData",
                        "description": "landline number, encrypted"
                      },
                      "email": {
                        "bsonType": "binData",
                        "description": "contact address, encrypted — randomly, unlike the login address, because nothing looks an account up by it"
                      }
                    },
                    "additionalProperties": false
                  }
                },
                "additionalProperties": false
              },
              "registeredAt": {
                "bsonType": "date",
                "description": "sign-up date"
              },
              "deleted": {
                "bsonType": "date",
                "description": "deletion date"
              },
              "disabled": {
                "bsonType": "bool",
                "description": "present and true: disabled, absent: login allowed"
              },
              "waitApprov": {
                "bsonType": "bool",
                "description": "present and true: may not log in until an admin approves this account"
              },
              "notes": {
                "bsonType": "binData",
                "description": "internal notes written by an admin about this shop owner, encrypted, never visible to them"
              },
              "resetPwd": {
                "bsonType": "object",
                "title": "object",
                "required": [
                  "resetDateReq",
                  "resetHash"
                ],
                "properties": {
                  "resetDateReq": {
                    "bsonType": "date",
                    "description": "request date"
                  },
                  "resetHash": {
                    "bsonType": "string",
                    "minLength": 50,
                    "maxLength": 50,
                    "description": "comparison hash"
                  }
                },
                "additionalProperties": false
              },
              "emailVerify": {
                "bsonType": "object",
                "title": "object",
                "properties": {
                  "valid": {
                    "bsonType": "bool",
                    "description": "true once a verification link has been used"
                  },
                  "hash": {
                    "bsonType": "string",
                    "minLength": 50,
                    "maxLength": 50,
                    "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
                  },
                  "dateLastReq": {
                    "bsonType": "date",
                    "description": "request date, sets the 3-day window"
                  },
                  "requestTimes": {
                    "bsonType": "int",
                    "description": "wrong-hash attempts, the fifth deletes the account"
                  },
                  "newEmailTmp": {
                    "bsonType": "binData",
                    "description": "new email awaiting confirmation, deterministically encrypted — koa-utils looks the account up by it"
                  }
                },
                "additionalProperties": false
              },
              "__v": {
                "bsonType": "int"
              }
            },
            "additionalProperties": false
          }
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "login.email": 1
      },
      "options": {
        "name": "login.email_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "deleted": 1,
        "disabled": 1,
        "registeredAt": -1,
        "_id": -1
      },
      "options": {
        "name": "tbl_active_registeredAt"
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "deleted": 1,
        "disabled": 1,
        "personalData.lastName": 1,
        "personalData.firstName": 1,
        "_id": 1
      },
      "options": {
        "name": "tbl_active_lastName_firstName"
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "deleted": 1,
        "disabled": 1,
        "personalData.firstName": 1,
        "_id": 1
      },
      "options": {
        "name": "tbl_active_firstName"
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "deleted": 1,
        "disabled": 1,
        "personalData.address.city": 1,
        "_id": 1
      },
      "options": {
        "name": "tbl_active_city"
      }
    },
    {
      "call": "createIndex",
      "name": "shopOwner",
      "key": {
        "registeredAt": 1
      },
      "options": {
        "name": "registeredAt_series"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000200-create-company.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "company"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000200-create-company.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "company",
      "options": {
        "validator": {
          "$and": [
            {
              "$jsonSchema": {
                "bsonType": "object",
                "title": "company",
                "required": [
                  "idShopOwner",
                  "legalName",
                  "vatNumber",
                  "contactPerson",
                  "administrator",
                  "certifiedEmail",
                  "registryExtract",
                  "address",
                  "published"
                ],
                "properties": {
                  "_id": {
                    "bsonType": "objectId"
                  },
                  "idShopOwner": {
                    "bsonType": "objectId"
                  },
                  "legalName": {
                    "bsonType": "string",
                    "maxLength": 100
                  },
                  "vatNumber": {
                    "bsonType": "string",
                    "maxLength": 11,
                    "minLength": 11
                  },
                  "taxCode": {
                    "bsonType": "string",
                    "maxLength": 11,
                    "minLength": 11
                  },
                  "contactPerson": {
                    "bsonType": "binData",
                    "description": "the person to contact at this company, encrypted — a natural person inside a legal record"
                  },
                  "administrator": {
                    "bsonType": "binData",
                    "description": "the administrator of this company, encrypted — a natural person inside a legal record"
                  },
                  "uniqueCode": {
                    "bsonType": "string",
                    "minLength": 7,
                    "maxLength": 7
                  },
                  "certifiedEmail": {
                    "bsonType": "string",
                    "maxLength": 250
                  },
                  "address": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "street",
                      "postalCode",
                      "city",
                      "province",
                      "position"
                    ],
                    "properties": {
                      "street": {
                        "bsonType": "string",
                        "maxLength": 100
                      },
                      "postalCode": {
                        "bsonType": "string",
                        "minLength": 5,
                        "maxLength": 5
                      },
                      "city": {
                        "bsonType": "string",
                        "maxLength": 100
                      },
                      "province": {
                        "bsonType": "string",
                        "minLength": 2,
                        "maxLength": 2
                      },
                      "position": {
                        "bsonType": "object",
                        "title": "object",
                        "required": [
                          "type",
                          "coordinates"
                        ],
                        "properties": {
                          "type": {
                            "bsonType": "string",
                            "maxLength": 5,
                            "description": "Point"
                          },
                          "coordinates": {
                            "bsonType": "array",
                            "minItems": 2,
                            "maxItems": 2,
                            "items": [
                              {
                                "bsonType": [
                                  "double",
                                  "int",
                                  "long"
                                ],
                                "maximum": 180,
                                "minimum": -180,
                                "description": "longitude"
                              },
                              {
                                "bsonType": [
                                  "double",
                                  "int",
                                  "long"
                                ],
                                "maximum": 90,
                                "minimum": -90,
                                "description": "latitude"
                              }
                            ]
                          }
                        },
                        "additionalProperties": false
                      }
                    },
                    "additionalProperties": false
                  },
                  "registryExtract": {
                    "bsonType": "string",
                    "maxLength": 1000
                  },
                  "publicName": {
                    "bsonType": "string",
                    "maxLength": 100,
                    "description": "the trading name shown to customers, not the registered legal name"
                  },
                  "slug": {
                    "bsonType": "string",
                    "minLength": 2,
                    "maxLength": 120,
                    "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
                    "description": "URL segment of /shop/:slug — lowercase, digits and single hyphens"
                  },
                  "description": {
                    "bsonType": "string",
                    "maxLength": 2000
                  },
                  "published": {
                    "bsonType": "bool",
                    "description": "false until the owner puts the shop live; nothing public reads a false row"
                  },
                  "deleted": {
                    "bsonType": "date"
                  },
                  "__v": {
                    "bsonType": "int"
                  }
                },
                "additionalProperties": false
              }
            },
            {
              "$expr": {
                "$or": [
                  {
                    "$ne": [
                      "$published",
                      true
                    ]
                  },
                  {
                    "$and": [
                      {
                        "$eq": [
                          {
                            "$type": "$slug"
                          },
                          "string"
                        ]
                      },
                      {
                        "$eq": [
                          {
                            "$type": "$publicName"
                          },
                          "string"
                        ]
                      }
                    ]
                  }
                ]
              }
            }
          ]
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "vatNumber": 1
      },
      "options": {
        "name": "vatNumber_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "certifiedEmail": 1
      },
      "options": {
        "name": "certifiedEmail_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "idShopOwner": 1
      },
      "options": {
        "name": "idShopOwner_list"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "slug": 1
      },
      "options": {
        "name": "slug_unique",
        "unique": true,
        "partialFilterExpression": {
          "slug": {
            "$type": "string"
          }
        }
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "address.position": "2dsphere"
      },
      "options": {
        "name": "address.position_2dsphere"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "published": 1,
        "deleted": 1
      },
      "options": {
        "name": "published_list"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "published": 1,
        "deleted": 1,
        "publicName": 1
      },
      "options": {
        "name": "published_publicName"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "published": 1,
        "deleted": 1,
        "address.city": 1,
        "publicName": 1
      },
      "options": {
        "name": "published_city_publicName"
      }
    },
    {
      "call": "createIndex",
      "name": "company",
      "key": {
        "publicName": "text",
        "description": "text"
      },
      "options": {
        "name": "search_text",
        "weights": {
          "publicName": 10,
          "description": 1
        },
        "default_language": "english"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000300-create-user.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "user"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000300-create-user.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "user",
      "options": {
        "validator": {
          "$and": [
            {
              "$jsonSchema": {
                "bsonType": "object",
                "title": "user",
                "required": [
                  "login",
                  "registeredAt"
                ],
                "properties": {
                  "_id": {
                    "bsonType": "objectId"
                  },
                  "login": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "email",
                      "password"
                    ],
                    "properties": {
                      "email": {
                        "bsonType": "binData",
                        "description": "login address, deterministically encrypted — equality is the only query it supports"
                      },
                      "password": {
                        "bsonType": "string",
                        "minLength": 60,
                        "maxLength": 60
                      },
                      "firstLogin": {
                        "bsonType": "date"
                      },
                      "lastLogin": {
                        "bsonType": "date"
                      },
                      "onboardingStep": {
                        "bsonType": "string",
                        "maxLength": 4
                      },
                      "onboardingDone": {
                        "bsonType": "bool"
                      },
                      "rememberMe": {
                        "bsonType": "bool"
                      }
                    },
                    "additionalProperties": false
                  },
                  "personalData": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "firstName",
                      "lastName"
                    ],
                    "properties": {
                      "firstName": {
                        "bsonType": "binData",
                        "description": "given name, encrypted"
                      },
                      "lastName": {
                        "bsonType": "binData",
                        "description": "family name, encrypted"
                      },
                      "birth": {
                        "bsonType": "object",
                        "title": "object",
                        "required": [
                          "date"
                        ],
                        "properties": {
                          "date": {
                            "bsonType": "binData",
                            "description": "date of birth, encrypted — no range query and no sort can reach it"
                          }
                        },
                        "additionalProperties": false
                      },
                      "contacts": {
                        "bsonType": "object",
                        "title": "object",
                        "properties": {
                          "mobile": {
                            "bsonType": "binData",
                            "description": "mobile number, encrypted"
                          },
                          "landline": {
                            "bsonType": "binData",
                            "description": "landline number, encrypted"
                          },
                          "email": {
                            "bsonType": "binData",
                            "description": "a second address to be reached on, encrypted — the credential is login.email"
                          }
                        },
                        "additionalProperties": false
                      }
                    },
                    "additionalProperties": false
                  },
                  "addresses": {
                    "bsonType": "array",
                    "maxItems": 6,
                    "items": {
                      "bsonType": "object",
                      "title": "object",
                      "required": [
                        "_id",
                        "street",
                        "postalCode",
                        "city",
                        "province"
                      ],
                      "properties": {
                        "_id": {
                          "bsonType": "objectId"
                        },
                        "label": {
                          "bsonType": "binData",
                          "description": "what the customer calls this address — \\"home\\", \\"office\\". Encrypted, optional, free text"
                        },
                        "street": {
                          "bsonType": "binData",
                          "description": "street and number, encrypted"
                        },
                        "postalCode": {
                          "bsonType": "binData",
                          "description": "postal code, encrypted — the exactly-5 rule cannot survive the ciphertext"
                        },
                        "city": {
                          "bsonType": "binData",
                          "description": "city, encrypted"
                        },
                        "province": {
                          "bsonType": "binData",
                          "description": "province, encrypted — the exactly-2 rule cannot survive the ciphertext"
                        },
                        "position": {
                          "bsonType": "binData",
                          "description": "GeoJSON point, encrypted whole — no 2dsphere index can read it, and none exists here"
                        }
                      },
                      "additionalProperties": false
                    },
                    "description": "every address this customer has saved; the default is named by defaultAddress"
                  },
                  "defaultAddress": {
                    "bsonType": "objectId",
                    "description": "the _id of one element of addresses — see the $expr rule alongside this schema"
                  },
                  "registeredAt": {
                    "bsonType": "date",
                    "description": "sign-up date"
                  },
                  "deleted": {
                    "bsonType": "date",
                    "description": "deletion date"
                  },
                  "disabled": {
                    "bsonType": "bool",
                    "description": "present and true: disabled, absent: login allowed"
                  },
                  "resetPwd": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "resetDateReq",
                      "resetHash"
                    ],
                    "properties": {
                      "resetDateReq": {
                        "bsonType": "date",
                        "description": "request date"
                      },
                      "resetHash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash"
                      }
                    },
                    "additionalProperties": false
                  },
                  "emailVerify": {
                    "bsonType": "object",
                    "title": "object",
                    "properties": {
                      "valid": {
                        "bsonType": "bool",
                        "description": "true once a verification link has been used"
                      },
                      "hash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
                      },
                      "dateLastReq": {
                        "bsonType": "date",
                        "description": "request date, sets the 3-day window"
                      },
                      "requestTimes": {
                        "bsonType": "int",
                        "description": "wrong-hash attempts, the fifth deletes the account"
                      },
                      "newEmailTmp": {
                        "bsonType": "binData",
                        "description": "new email awaiting confirmation, deterministically encrypted — koa-utils looks the account up by it"
                      }
                    },
                    "additionalProperties": false
                  },
                  "__v": {
                    "bsonType": "int"
                  }
                },
                "additionalProperties": false
              }
            },
            {
              "$expr": {
                "$or": [
                  {
                    "$eq": [
                      {
                        "$type": "$defaultAddress"
                      },
                      "missing"
                    ]
                  },
                  {
                    "$in": [
                      "$defaultAddress",
                      {
                        "$map": {
                          "input": {
                            "$ifNull": [
                              "$addresses",
                              []
                            ]
                          },
                          "in": "$$this._id"
                        }
                      }
                    ]
                  }
                ]
              }
            }
          ]
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "user",
      "key": {
        "login.email": 1
      },
      "options": {
        "name": "login.email_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "user",
      "key": {
        "deleted": 1
      },
      "options": {
        "name": "deleted_ttl",
        "expireAfterSeconds": 2592000
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000400-create-itemCategory.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "itemCategory"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000400-create-itemCategory.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "itemCategory",
      "options": {
        "validator": {
          "$jsonSchema": {
            "bsonType": "object",
            "title": "itemCategory",
            "required": [
              "name",
              "slug",
              "position"
            ],
            "properties": {
              "_id": {
                "bsonType": "objectId"
              },
              "name": {
                "bsonType": "string",
                "maxLength": 100
              },
              "slug": {
                "bsonType": "string",
                "minLength": 2,
                "maxLength": 120,
                "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
                "description": "URL segment of /category/:slug — unique across both levels"
              },
              "idParent": {
                "bsonType": "objectId",
                "description": "absent = top-level category; present = subcategory. Depth beyond 2 is refused by the resolver"
              },
              "position": {
                "bsonType": "int",
                "minimum": 0,
                "description": "sort ordinal within the level — NOT the GeoJSON position from lib/schemas/geo.js"
              },
              "deleted": {
                "bsonType": "date"
              },
              "__v": {
                "bsonType": "int"
              }
            },
            "additionalProperties": false
          }
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "itemCategory",
      "key": {
        "slug": 1
      },
      "options": {
        "name": "slug_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "itemCategory",
      "key": {
        "idParent": 1,
        "position": 1
      },
      "options": {
        "name": "idParent_position"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000500-create-item.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "drop",
      "name": "item"
    }
  ],
  "logged": []
}"
`;

exports[`20260301000500-create-item.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createCollection",
      "name": "item",
      "options": {
        "validator": {
          "$jsonSchema": {
            "bsonType": "object",
            "title": "item",
            "required": [
              "idCompany",
              "idCategory",
              "name",
              "description",
              "slug",
              "published"
            ],
            "properties": {
              "_id": {
                "bsonType": "objectId"
              },
              "idCompany": {
                "bsonType": "objectId",
                "description": "the company that sells this — the shop, since a company IS the shop here"
              },
              "idCategory": {
                "bsonType": "objectId",
                "description": "an itemCategory row, at either of its two levels"
              },
              "name": {
                "bsonType": "string",
                "maxLength": 150
              },
              "description": {
                "bsonType": "string",
                "maxLength": 2000
              },
              "slug": {
                "bsonType": "string",
                "minLength": 2,
                "maxLength": 160,
                "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
                "description": "URL segment of /shop/:slug/item/:itemSlug — unique within the company, not globally"
              },
              "published": {
                "bsonType": "bool",
                "description": "false while a draft; a public read also requires the company to be published"
              },
              "image": {
                "bsonType": "string",
                "pattern": "^[a-f0-9]{24}\\\\.[a-z0-9]{3,4}$",
                "description": "file name of the item picture under STATIC_FOLDER/item/<idCompany>/ — absent while it has none"
              },
              "deleted": {
                "bsonType": "date"
              },
              "__v": {
                "bsonType": "int"
              }
            },
            "additionalProperties": false
          }
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    },
    {
      "call": "createIndex",
      "name": "item",
      "key": {
        "idCompany": 1,
        "deleted": 1
      },
      "options": {
        "name": "idCompany_list"
      }
    },
    {
      "call": "createIndex",
      "name": "item",
      "key": {
        "idCompany": 1,
        "slug": 1
      },
      "options": {
        "name": "idCompany_slug_unique",
        "unique": true
      }
    },
    {
      "call": "createIndex",
      "name": "item",
      "key": {
        "idCompany": 1,
        "published": 1,
        "deleted": 1,
        "name": 1
      },
      "options": {
        "name": "idCompany_published_name"
      }
    },
    {
      "call": "createIndex",
      "name": "item",
      "key": {
        "idCategory": 1,
        "published": 1,
        "deleted": 1,
        "name": 1
      },
      "options": {
        "name": "idCategory_published_name"
      }
    },
    {
      "call": "createIndex",
      "name": "item",
      "key": {
        "name": "text",
        "description": "text"
      },
      "options": {
        "name": "search_text",
        "weights": {
          "name": 10,
          "description": 1
        },
        "default_language": "english"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260301000600-seed-demo.js — with SEED_DEMO off, both directions are no-ops > down — SEED_DEMO off 1`] = `
"{
  "calls": [],
  "logged": []
}"
`;

exports[`20260301000600-seed-demo.js — with SEED_DEMO off, both directions are no-ops > up — SEED_DEMO off 1`] = `
"{
  "calls": [],
  "logged": [
    "[seed-demo] SEED_DEMO !== \\"true\\" — skipping demo seed."
  ]
}"
`;

exports[`20260301000600-seed-demo.js — with SEED_DEMO on, down deletes the three documents up wrote > down 1`] = `
"{
  "calls": [
    {
      "call": "deleteOne",
      "name": "company",
      "filter": {
        "_id": "ObjectId(5c9a013fcf1448b9d885a000)"
      }
    },
    {
      "call": "deleteOne",
      "name": "shopOwner",
      "filter": {
        "_id": "ObjectId(5c9a013fcf1448b9d885e000)"
      }
    },
    {
      "call": "deleteOne",
      "name": "admin",
      "filter": {
        "_id": "ObjectId(5c9a013fcf1448b9d885e018)"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260825000000-user-add-tbl-active-index.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "dropIndex",
      "name": "user",
      "indexName": "tbl_active_registeredAt"
    }
  ],
  "logged": []
}"
`;

exports[`20260825000000-user-add-tbl-active-index.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "createIndex",
      "name": "user",
      "key": {
        "deleted": 1,
        "disabled": 1,
        "registeredAt": -1,
        "_id": -1
      },
      "options": {
        "name": "tbl_active_registeredAt"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260826000000-user-cap-addresses.js — up() and down() issue exactly these driver calls > down 1`] = `
"{
  "calls": [
    {
      "call": "command",
      "spec": {
        "collMod": "user",
        "validator": {
          "$and": [
            {
              "$jsonSchema": {
                "bsonType": "object",
                "title": "user",
                "required": [
                  "login",
                  "registeredAt"
                ],
                "properties": {
                  "_id": {
                    "bsonType": "objectId"
                  },
                  "login": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "email",
                      "password"
                    ],
                    "properties": {
                      "email": {
                        "bsonType": "binData",
                        "description": "login address, deterministically encrypted — equality is the only query it supports"
                      },
                      "password": {
                        "bsonType": "string",
                        "minLength": 60,
                        "maxLength": 60
                      },
                      "firstLogin": {
                        "bsonType": "date"
                      },
                      "lastLogin": {
                        "bsonType": "date"
                      },
                      "onboardingStep": {
                        "bsonType": "string",
                        "maxLength": 4
                      },
                      "onboardingDone": {
                        "bsonType": "bool"
                      },
                      "rememberMe": {
                        "bsonType": "bool"
                      }
                    },
                    "additionalProperties": false
                  },
                  "personalData": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "firstName",
                      "lastName"
                    ],
                    "properties": {
                      "firstName": {
                        "bsonType": "binData",
                        "description": "given name, encrypted"
                      },
                      "lastName": {
                        "bsonType": "binData",
                        "description": "family name, encrypted"
                      },
                      "birth": {
                        "bsonType": "object",
                        "title": "object",
                        "required": [
                          "date"
                        ],
                        "properties": {
                          "date": {
                            "bsonType": "binData",
                            "description": "date of birth, encrypted — no range query and no sort can reach it"
                          }
                        },
                        "additionalProperties": false
                      },
                      "contacts": {
                        "bsonType": "object",
                        "title": "object",
                        "properties": {
                          "mobile": {
                            "bsonType": "binData",
                            "description": "mobile number, encrypted"
                          },
                          "landline": {
                            "bsonType": "binData",
                            "description": "landline number, encrypted"
                          },
                          "email": {
                            "bsonType": "binData",
                            "description": "a second address to be reached on, encrypted — the credential is login.email"
                          }
                        },
                        "additionalProperties": false
                      }
                    },
                    "additionalProperties": false
                  },
                  "addresses": {
                    "bsonType": "array",
                    "items": {
                      "bsonType": "object",
                      "title": "object",
                      "required": [
                        "_id",
                        "street",
                        "postalCode",
                        "city",
                        "province"
                      ],
                      "properties": {
                        "_id": {
                          "bsonType": "objectId"
                        },
                        "label": {
                          "bsonType": "binData",
                          "description": "what the customer calls this address — \\"home\\", \\"office\\". Encrypted, optional, free text"
                        },
                        "street": {
                          "bsonType": "binData",
                          "description": "street and number, encrypted"
                        },
                        "postalCode": {
                          "bsonType": "binData",
                          "description": "postal code, encrypted — the exactly-5 rule cannot survive the ciphertext"
                        },
                        "city": {
                          "bsonType": "binData",
                          "description": "city, encrypted"
                        },
                        "province": {
                          "bsonType": "binData",
                          "description": "province, encrypted — the exactly-2 rule cannot survive the ciphertext"
                        },
                        "position": {
                          "bsonType": "binData",
                          "description": "GeoJSON point, encrypted whole — no 2dsphere index can read it, and none exists here"
                        }
                      },
                      "additionalProperties": false
                    },
                    "description": "every address this customer has saved; the default is named by defaultAddress"
                  },
                  "defaultAddress": {
                    "bsonType": "objectId",
                    "description": "the _id of one element of addresses — see the $expr rule alongside this schema"
                  },
                  "registeredAt": {
                    "bsonType": "date",
                    "description": "sign-up date"
                  },
                  "deleted": {
                    "bsonType": "date",
                    "description": "deletion date"
                  },
                  "disabled": {
                    "bsonType": "bool",
                    "description": "present and true: disabled, absent: login allowed"
                  },
                  "resetPwd": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "resetDateReq",
                      "resetHash"
                    ],
                    "properties": {
                      "resetDateReq": {
                        "bsonType": "date",
                        "description": "request date"
                      },
                      "resetHash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash"
                      }
                    },
                    "additionalProperties": false
                  },
                  "emailVerify": {
                    "bsonType": "object",
                    "title": "object",
                    "properties": {
                      "valid": {
                        "bsonType": "bool",
                        "description": "true once a verification link has been used"
                      },
                      "hash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
                      },
                      "dateLastReq": {
                        "bsonType": "date",
                        "description": "request date, sets the 3-day window"
                      },
                      "requestTimes": {
                        "bsonType": "int",
                        "description": "wrong-hash attempts, the fifth deletes the account"
                      },
                      "newEmailTmp": {
                        "bsonType": "binData",
                        "description": "new email awaiting confirmation, deterministically encrypted — koa-utils looks the account up by it"
                      }
                    },
                    "additionalProperties": false
                  },
                  "__v": {
                    "bsonType": "int"
                  }
                },
                "additionalProperties": false
              }
            },
            {
              "$expr": {
                "$or": [
                  {
                    "$eq": [
                      {
                        "$type": "$defaultAddress"
                      },
                      "missing"
                    ]
                  },
                  {
                    "$in": [
                      "$defaultAddress",
                      {
                        "$map": {
                          "input": {
                            "$ifNull": [
                              "$addresses",
                              []
                            ]
                          },
                          "in": "$$this._id"
                        }
                      }
                    ]
                  }
                ]
              }
            }
          ]
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    }
  ],
  "logged": []
}"
`;

exports[`20260826000000-user-cap-addresses.js — up() and down() issue exactly these driver calls > up 1`] = `
"{
  "calls": [
    {
      "call": "command",
      "spec": {
        "collMod": "user",
        "validator": {
          "$and": [
            {
              "$jsonSchema": {
                "bsonType": "object",
                "title": "user",
                "required": [
                  "login",
                  "registeredAt"
                ],
                "properties": {
                  "_id": {
                    "bsonType": "objectId"
                  },
                  "login": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "email",
                      "password"
                    ],
                    "properties": {
                      "email": {
                        "bsonType": "binData",
                        "description": "login address, deterministically encrypted — equality is the only query it supports"
                      },
                      "password": {
                        "bsonType": "string",
                        "minLength": 60,
                        "maxLength": 60
                      },
                      "firstLogin": {
                        "bsonType": "date"
                      },
                      "lastLogin": {
                        "bsonType": "date"
                      },
                      "onboardingStep": {
                        "bsonType": "string",
                        "maxLength": 4
                      },
                      "onboardingDone": {
                        "bsonType": "bool"
                      },
                      "rememberMe": {
                        "bsonType": "bool"
                      }
                    },
                    "additionalProperties": false
                  },
                  "personalData": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "firstName",
                      "lastName"
                    ],
                    "properties": {
                      "firstName": {
                        "bsonType": "binData",
                        "description": "given name, encrypted"
                      },
                      "lastName": {
                        "bsonType": "binData",
                        "description": "family name, encrypted"
                      },
                      "birth": {
                        "bsonType": "object",
                        "title": "object",
                        "required": [
                          "date"
                        ],
                        "properties": {
                          "date": {
                            "bsonType": "binData",
                            "description": "date of birth, encrypted — no range query and no sort can reach it"
                          }
                        },
                        "additionalProperties": false
                      },
                      "contacts": {
                        "bsonType": "object",
                        "title": "object",
                        "properties": {
                          "mobile": {
                            "bsonType": "binData",
                            "description": "mobile number, encrypted"
                          },
                          "landline": {
                            "bsonType": "binData",
                            "description": "landline number, encrypted"
                          },
                          "email": {
                            "bsonType": "binData",
                            "description": "a second address to be reached on, encrypted — the credential is login.email"
                          }
                        },
                        "additionalProperties": false
                      }
                    },
                    "additionalProperties": false
                  },
                  "addresses": {
                    "bsonType": "array",
                    "maxItems": 6,
                    "items": {
                      "bsonType": "object",
                      "title": "object",
                      "required": [
                        "_id",
                        "street",
                        "postalCode",
                        "city",
                        "province"
                      ],
                      "properties": {
                        "_id": {
                          "bsonType": "objectId"
                        },
                        "label": {
                          "bsonType": "binData",
                          "description": "what the customer calls this address — \\"home\\", \\"office\\". Encrypted, optional, free text"
                        },
                        "street": {
                          "bsonType": "binData",
                          "description": "street and number, encrypted"
                        },
                        "postalCode": {
                          "bsonType": "binData",
                          "description": "postal code, encrypted — the exactly-5 rule cannot survive the ciphertext"
                        },
                        "city": {
                          "bsonType": "binData",
                          "description": "city, encrypted"
                        },
                        "province": {
                          "bsonType": "binData",
                          "description": "province, encrypted — the exactly-2 rule cannot survive the ciphertext"
                        },
                        "position": {
                          "bsonType": "binData",
                          "description": "GeoJSON point, encrypted whole — no 2dsphere index can read it, and none exists here"
                        }
                      },
                      "additionalProperties": false
                    },
                    "description": "every address this customer has saved; the default is named by defaultAddress"
                  },
                  "defaultAddress": {
                    "bsonType": "objectId",
                    "description": "the _id of one element of addresses — see the $expr rule alongside this schema"
                  },
                  "registeredAt": {
                    "bsonType": "date",
                    "description": "sign-up date"
                  },
                  "deleted": {
                    "bsonType": "date",
                    "description": "deletion date"
                  },
                  "disabled": {
                    "bsonType": "bool",
                    "description": "present and true: disabled, absent: login allowed"
                  },
                  "resetPwd": {
                    "bsonType": "object",
                    "title": "object",
                    "required": [
                      "resetDateReq",
                      "resetHash"
                    ],
                    "properties": {
                      "resetDateReq": {
                        "bsonType": "date",
                        "description": "request date"
                      },
                      "resetHash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash"
                      }
                    },
                    "additionalProperties": false
                  },
                  "emailVerify": {
                    "bsonType": "object",
                    "title": "object",
                    "properties": {
                      "valid": {
                        "bsonType": "bool",
                        "description": "true once a verification link has been used"
                      },
                      "hash": {
                        "bsonType": "string",
                        "minLength": 50,
                        "maxLength": 50,
                        "description": "comparison hash, EMAIL_HASH_LEN in koa-utils"
                      },
                      "dateLastReq": {
                        "bsonType": "date",
                        "description": "request date, sets the 3-day window"
                      },
                      "requestTimes": {
                        "bsonType": "int",
                        "description": "wrong-hash attempts, the fifth deletes the account"
                      },
                      "newEmailTmp": {
                        "bsonType": "binData",
                        "description": "new email awaiting confirmation, deterministically encrypted — koa-utils looks the account up by it"
                      }
                    },
                    "additionalProperties": false
                  },
                  "__v": {
                    "bsonType": "int"
                  }
                },
                "additionalProperties": false
              }
            },
            {
              "$expr": {
                "$or": [
                  {
                    "$eq": [
                      {
                        "$type": "$defaultAddress"
                      },
                      "missing"
                    ]
                  },
                  {
                    "$in": [
                      "$defaultAddress",
                      {
                        "$map": {
                          "input": {
                            "$ifNull": [
                              "$addresses",
                              []
                            ]
                          },
                          "in": "$$this._id"
                        }
                      }
                    ]
                  }
                ]
              }
            }
          ]
        },
        "validationLevel": "strict",
        "validationAction": "error"
      }
    }
  ],
  "logged": []
}"
`;
